♻️ refactor: replace Stack/LinkedList with Deque/ArrayDeque